# bevy_light_field

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: test.yml
assets/: streams.json
src/: ffmpeg.rs  grid_view.rs  lib.rs  matting.rs  mp4.rs  person_detect.rs  pipeline.rs  stream.rs  yolo.rs
src/materials/: foreground.rs  foreground.wgsl  mod.rs
tools/: viewer.rs
