[package]
name = "bevy_light_field"
description = "rust bevy light field array tooling"
version = "0.1.0"
edition = "2021"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT"
keywords = [
  "bevy",
  "light-field",
  "rtsp",
]
homepage = "https://github.com/mosure/bevy_light_field"
repository = "https://github.com/mosure/bevy_light_field"
readme = "README.md"
exclude = [
  ".devcontainer",
  ".github",
  "docs",
  "dist",
  "build",
  "assets",
  "credits",
]

default-run = "viewer"


[dependencies]
anyhow = "1.0.80"
async-compat = "0.2.3"
futures = "0.3.30"
openh264 = "0.5.0"
retina = "0.4.7"
url = "2.5.0"


[dependencies.bevy]
version = "0.13"
default-features = false
features = [
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_winit",
  "multi-threaded",
]


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"


[dependencies.web-sys]
version = "=0.3.67"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Location',
  'Node',
  'Window',
]


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1



[lib]
path = "src/lib.rs"


[[bin]]
name = "viewer"
path = "tools/viewer.rs"
