[package]
name = "bevy_light_field"
description = "rust bevy light field array tooling"
version = "0.3.0"
edition = "2021"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT"
keywords = [
  "bevy",
  "light-field",
  "rtsp",
]
homepage = "https://github.com/mosure/bevy_light_field"
repository = "https://github.com/mosure/bevy_light_field"
readme = "README.md"
exclude = [
  ".devcontainer",
  ".github",
  "docs",
  "dist",
  "build",
  "assets",
  "credits",
]

default-run = "viewer"


[dependencies]
anyhow = "1.0"
async-compat = "0.2"
bytes = "1.5.0"
futures = "0.3"
openh264 = "0.5"
retina = "0.4"
tokio = { version = "1.36", features = ["full"] }
url = "2.5"


[dependencies.bevy]
version = "0.13"
default-features = false
features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_ui",
  "bevy_winit",
  "multi-threaded",
]


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3


[lib]
path = "src/lib.rs"


[[bin]]
name = "viewer"
path = "tools/viewer.rs"
