[package]
name = "bevy_light_field"
description = "rust bevy light field array tooling"
version = "0.7.0"
edition = "2021"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT"
keywords = [
  "bevy",
  "light-field",
  "rtsp",
]
homepage = "https://github.com/mosure/bevy_light_field"
repository = "https://github.com/mosure/bevy_light_field"
readme = "README.md"
exclude = [
  ".devcontainer",
  ".github",
  "docs",
  "dist",
  "build",
  "assets",
  "credits",
]

default-run = "viewer"

[features]
default = [
  "person_matting",
  "pipeline",
]

person_matting = ["bevy_ort", "ort", "ndarray"]
pipeline = ["image", "rayon"]
yolo = ["bevy_ort", "ort", "ndarray"]


[dependencies]
anyhow = "1.0"
async-compat = "0.2"
bevy_args = "1.3"
bevy_ort = { version = "0.7.2", optional = true, features = ["yolo_v8"] }
bytes = "1.5"
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
image = { version = "0.24", optional = true }
ndarray = { version = "0.15", optional = true }
openh264 = "0.5"
rayon = { version = "1.8", optional = true }
serde = "1.0"
serde_json = "1.0"
serde_qs = "0.12"
retina = "0.4"
tokio = { version = "1.36", features = ["full"] }
url = "2.5"
png = "0.17.13"


[dependencies.bevy]
version = "0.13"
default-features = false
features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_ui",
  "bevy_winit",
  "multi-threaded",
]


[dependencies.ort]
version = "2.0.0-alpha.4"
optional = true
default-features = false
features = [
  "cuda",
  "load-dynamic",
  "ndarray",
  "openvino",
]


[dev-dependencies]
approx = "0.5"


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3


[lib]
path = "src/lib.rs"


[[bin]]
name = "viewer"
path = "tools/viewer.rs"
